# signals

./: .gitignore  README.md  pyproject.toml
data/: constants.py  ex_4_a_1.py  ex_4_a_10.py  ex_4_a_11.py  ex_4_a_12.py  ex_4_a_2.py  ex_4_a_3.py  ex_4_a_4.py  ex_4_a_5.py  ex_4_a_6.py  ex_4_a_7.py  ex_4_a_8.py  ex_4_a_9.py  ex_5_4.py  ex_5_6.py
examples/: example_1.py  example_2.py  example_3.py  example_4_a_1.py  example_4_a_2.py  examples_3_1_1_iir.py  examples_3_1_2_iir.py  examples_3_1_3_iir.py  examples_3_2_1_kaiser.py  examples_3_2_2_kaiser.py  examples_3_2_3_kaiser.py  examples_3_2_4_kaiser.py  examples_3_2_5_kaiser.py  examples_3_2_6_kaiser.py  examples_3_2_7_kaiser.py  examples_3_2_8_kaiser.py  examples_3_2_9_kaiser.py  examples_4_a_1.py  examples_4_a_2.py  examples_4_a_3.py  examples_5_4.py  examples_5_6.py  examples_6.py  problems_5_3_7.py  problems_5_3_9.py
nashhertz/: application.py  main.py
nashhertz/gui/: advanced.py  mainwindow.py  quickfilter.py  settings.py  utilities.py
plotting/: plotting.py
reference/: dsp.tex
sdr/: exercise_05_01.py  exercise_05_04.py
signal_processor/: analog.py  filter.py  finite_impulse_response.py  fourier_transform.py  infinite_impulse_response.py  stochastic.py  utility.py
signals/: analog.py  circuit.py  finite_impulse_response.py  fourier_transform.py  infinite_impulse_response.py  stochastic.py  utility.py
tests/: iir_constants.py  test_fir.py  test_iir.py
