[project]
name = "signal_processor"
version = "0.0.0"
authors = [
	{ name="Stewart Nash", email="pervigilent@gmail.com" },
]
description = "A signal processing algorithm library"
readme = "README.md"
requires-python = ">=3.9"
classifiers = [
	"Programming Language :: Python :: 3",
	"Operating System :: OS Independent",
]
license = "MIT"
license-files = ["LICEN[CS]E*"]

[project.urls]
Homepage = "https://github.com/stewartnash/signal_processor"
